[gd_scene load_steps=26 format=3 uid="uid://casueufmvqd05"]

[ext_resource type="Texture2D" uid="uid://dbhe11c64n12n" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/UI/UI-D-2.png" id="1_eit8a"]
[ext_resource type="Script" path="res://UI/exit_menu.gd" id="1_ia22v"]
[ext_resource type="Texture2D" uid="uid://cmntlsxstdgml" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/Menu/A/Menu-Continue.png" id="2_4kpc1"]
[ext_resource type="Texture2D" uid="uid://brhi6n045uhtc" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/Menu/A/Menu-Settings.png" id="3_y8xfu"]
[ext_resource type="Texture2D" uid="uid://cu3psaipgaavt" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/Menu/A/Menu-Quit.png" id="4_raj2h"]
[ext_resource type="Texture2D" uid="uid://dpek3onfb24d3" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/16x16/Set1/Set1-11.png" id="6_616r8"]
[ext_resource type="Texture2D" uid="uid://rghsbant24b5" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/Menu/A/menu-Controls.png" id="7_b4kht"]
[ext_resource type="Texture2D" uid="uid://bdkapjj5fkdja" path="res://Graphics/UI/UI pixelart Assets 4 -1.3/Menu/A/Menu-Back.png" id="8_2s7gt"]
[ext_resource type="FontFile" uid="uid://btgox6rp0hjlb" path="res://Font/Born2bSportyV2.ttf" id="9_hxx1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdyit"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wye7n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkxyt"]
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6ys7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6kun"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kikne"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7l7ld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxb1o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23t77"]

[sub_resource type="Theme" id="Theme_fb5i8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31a5w"]
bg_color = Color(0.821172, 0.525951, 0.10247, 1)
corner_radius_top_left = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_droxu"]
bg_color = Color(0.819608, 0.52549, 0.101961, 1)
corner_radius_top_left = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_jw11f"]
line_spacing = 0.0
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xvtw6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_th23d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s1cc"]

[node name="ExitMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_ia22v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExitMenuContainer" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -296.0
offset_right = -140.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="Control/ExitMenuContainer"]
layout_mode = 2
texture = ExtResource("1_eit8a")

[node name="MarginContainer" type="MarginContainer" parent="Control/ExitMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ExitMenuContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Seperator" type="Control" parent="Control/ExitMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ContinueButton" type="Button" parent="Control/ExitMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdyit")
theme_override_styles/hover = SubResource("StyleBoxFlat_wye7n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gkxyt")
icon = ExtResource("2_4kpc1")
flat = true

[node name="SettingsButton" type="Button" parent="Control/ExitMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_o6ys7")
theme_override_styles/hover = SubResource("StyleBoxFlat_d6kun")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kikne")
icon = ExtResource("3_y8xfu")
flat = true

[node name="QuitButton" type="Button" parent="Control/ExitMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_7l7ld")
theme_override_styles/hover = SubResource("StyleBoxFlat_qxb1o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_23t77")
icon = ExtResource("4_raj2h")
flat = true

[node name="Seperator2" type="Control" parent="Control/ExitMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="SettingsMenuContainer" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -283.0
offset_right = -139.0
offset_bottom = -178.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="Control/SettingsMenuContainer"]
layout_mode = 2
texture = ExtResource("1_eit8a")

[node name="MarginContainer" type="MarginContainer" parent="Control/SettingsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsMenuContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeSlider" type="HSlider" parent="Control/SettingsMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_fb5i8")
theme_override_icons/grabber = ExtResource("6_616r8")
theme_override_icons/grabber_highlight = ExtResource("6_616r8")
theme_override_icons/grabber_disabled = ExtResource("6_616r8")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_31a5w")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_droxu")
min_value = -30.0
max_value = 20.0

[node name="Seperator" type="Control" parent="Control/SettingsMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ControlsButton" type="Button" parent="Control/SettingsMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_o6ys7")
theme_override_styles/hover = SubResource("StyleBoxFlat_d6kun")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kikne")
icon = ExtResource("7_b4kht")
flat = true

[node name="BackButton1" type="Button" parent="Control/SettingsMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_7l7ld")
theme_override_styles/hover = SubResource("StyleBoxFlat_qxb1o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_23t77")
icon = ExtResource("8_2s7gt")
flat = true

[node name="Seperator2" type="Control" parent="Control/SettingsMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ControlsMenuContainer" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -275.0
offset_right = -148.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect2" type="TextureRect" parent="Control/ControlsMenuContainer"]
layout_mode = 2
texture = ExtResource("1_eit8a")

[node name="MarginContainer" type="MarginContainer" parent="Control/ControlsMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ControlsMenuContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/ControlsMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_hxx1e")
text = "WASD: Move
LMB: Attack
Shift: Dash
Tab: Swap 
      Weapon"
label_settings = SubResource("LabelSettings_jw11f")

[node name="BackButton2" type="Button" parent="Control/ControlsMenuContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xvtw6")
theme_override_styles/hover = SubResource("StyleBoxFlat_th23d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1s1cc")
icon = ExtResource("8_2s7gt")
flat = true
